       versions of packages \pkg{zlib}, \pkg{bzip2}/\pkg{libbz2} and
       \code{pcre} (or similar names) are installed.

       \item \command{configure} requires the \command{texi2any} script
       from \pkg{texinfo} 5.1 or later, replacing the \command{makeinfo}
       program.  (\command{makeinfo} is a link to the Perl script
       \command{texi2any} in \pkg{texinfo} 5.x.)
     }
  }

  \subsection{UTILITIES}{
    \itemize{
      \item There is support for testing the \code{\\dontrun} and
      \code{\\donttest} parts of examples in packages.

      \code{tools::testInstalledPackage()} accepts new arguments
      \code{commentDontrun = FALSE} and \code{commentDonttest = FALSE}.

      \command{R CMD check} gains options \option{--run-dontrun} and
      \option{--run-donttest}.

      \item The \acronym{HTML} generated by \code{tools::Rd2HTML()} and
      \code{tools::toHTML()} methods is now
      \sQuote{\acronym{XHTML} 1.0 Strict}.

      \item The \pkg{compiler} package has a new utility function
      \code{setCompilerOptions()} now returns the old values
      invisibly. The initial optimization level can also be set with the
      environment variable \env{R_COMPILER_OPTIMIZE}.

      \item \command{R CMD check} gains option \option{--test-dir} to
      specify an alternative set of tests to run.

      \item \command{R CMD check} will now by default continue with
      testing after many types of errors, and will output a summary
      count of errors at the end if any have occurred.

      \item \command{R CMD check --as-cran} checks a \file{README.md}
      file can be processed: this needs \command{pandoc} installed.

      \item \command{R CMD build} adds a \samp{NeedsCompilation} field
      if one is not already present in the DESCRIPTION file.

      \item \command{R CMD check} notes uses of \code{library()} and
      \code{require()} in package code: see the section
      \sQuote{Suggested packages} of \sQuote{Writing R Extensions} for